--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="BaseThemeLight" parent="@android:style/Theme.Holo.Light.NoActionBar">
+    <style name="BaseThemeLight" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="appSelectableItemBackground">?android:attr/selectableItemBackground</item>
         <item name="android:actionMenuTextColor">@android:color/white</item>
     </style>
