--- a/app/src/main/res/layout/dialog_password.xml
+++ b/app/src/main/res/layout/dialog_password.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:gravity="center"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <EditText
         android:id="@+id/et_setting_password"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_weight="1"
         android:textSize="25sp"
+        android:inputType="textPassword"
         android:textColor="#000"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
         android:layout_height="wrap_content"
         android:padding="10dp" />
+
+    <ImageView
+        android:id="@+id/iv_show_password"
+        android:background="@mipmap/show_pwd"
+        android:layout_marginRight="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"/>
 
 </LinearLayout>
