--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:background="@mipmap/bg_desktop"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:id="@+id/fl_backgroup"
     tools:context=".activity.MainActivity">
 
 
