--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -5,26 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/bg_desktop"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".activity.UpdateActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_app_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2" />
-
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:layout_weight="3"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:gravity="right"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
@@ -39,9 +32,8 @@
                 android:id="@+id/et_remoteIp"
                 android:padding="5dp"
                 android:background="@drawable/shape_et_ip_address"
-                android:layout_width="0dp"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:textSize="26sp" />
         </LinearLayout>
@@ -61,6 +53,15 @@
             android:textSize="26sp" />
 
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_app_list"
+        android:layout_width="600dp"
+        android:padding="15dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+
 
 
 </LinearLayout>
